src/tests/snapshots/gitu__tests__quit__confirm_quit_prompt.snap
---
source: src/tests/quit.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Really quit? (y or n) › █                                                     |
styles_hash: 2510ac559ee2b00a
